Added Material Table
Added Material Table

--- a/angular-material/src/app/employees/employees.component.html
+++ b/angular-material/src/app/employees/employees.component.html
@@ -3,5 +3,6 @@
     <span>My Application</span>
     <span class="fill-remaining-space"></span>
   </mat-toolbar>
+  <!-- <app-employee-list></app-employee-list> -->
   <app-employee></app-employee>
 </div>
