--- a/angular-material/src/styles.css
+++ b/angular-material/src/styles.css
@@ -35,3 +35,16 @@ form.normal-form{
 .button-row button{
   margin: 5px;
 }
+
+/* Notification Class CSS */
+snack-bar-container.success{
+  background-color: #5cb85c;
+  color: #fff;
+}
+
+snack-bar-container.notification simple-snack-bar{
+  font-size: 18px !important;
+  font-weight: bold;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
