--- a/angular-material/src/app/employees/employee/employee.component.html
+++ b/angular-material/src/app/employees/employee/employee.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="service.form" class="normal-form" (ngSubmit)="onSubmit(service.form)">
+<form [formGroup]="service.form" class="normal-form" (submit)="onSubmit()">
   <mat-grid-list cols="2" rowHeight="300px">
     <mat-grid-tile>
       <div class="controllers-container">
@@ -24,7 +24,7 @@
     <mat-grid-tile>
       <div class="controllers-container">
         <div class="add-bottom-padding">
-          <mat-radio-group aria-label="Select an option">
+          <mat-radio-group formControlName="gender" aria-label="Select an option">
             <mat-radio-button value="1">Male</mat-radio-button>
             <mat-radio-button value="2">Female</mat-radio-button>
             <mat-radio-button value="3">Other</mat-radio-button>
@@ -32,9 +32,9 @@
         </div>
         <mat-form-field>
           <mat-select formControlName="department" placeholder="Department">
-            <mat-option>None</mat-option>
-            <ng-container *ngFor="let department of departments">
-              <mat-option value="{{department.id}}">{{department.value}}</mat-option>
+            <mat-option disabled>None</mat-option>
+            <ng-container *ngFor="let department of departmentService.array">
+              <mat-option value="{{department.$key}}">{{department.code}}-{{department.name}}</mat-option>
             </ng-container>
           </mat-select>
         </mat-form-field>
